# ZodiacCore-Py

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml  docs.yml
benchmarks/: conftest.py  test_internal_micro.py  test_routing_overhead.py
docs/: index.md
docs/api/: config.md  context.md  db.md  exceptions.md  logging.md  middleware.md  pagination.md  routing.md  schemas.md
docs/user-guide/: architecture.md  cli.md  getting-started.md  installation.md
tests/: conftest.py  test_build.py  test_config.py  test_db_session.py  test_exception_handlers.py  test_exceptions.py  test_http.py  test_integration_install.py  test_logging.py  test_middleware.py  test_pagination.py  test_routing.py  test_schemas_live.py  test_sql_live.py  utils.py
tests/db/: test_live.py  test_models.py  test_multi_db.py  test_repository.py  test_session.py  utils.py
tests/zodiac/: test_new_command.py
zodiac/commands/: new.py
zodiac/templates/standard-3tier/: README.md.jinja  main.py.jinja  pyproject.toml.jinja
zodiac/templates/standard-3tier/app/api/: router.py.jinja
zodiac/templates/standard-3tier/app/api/routers/: item_router.py.jinja
zodiac/templates/standard-3tier/app/api/schemas/: item_schema.py.jinja
zodiac/templates/standard-3tier/app/application/services/: github_service.py.jinja  item_service.py.jinja
zodiac/templates/standard-3tier/app/core/: container.py.jinja
zodiac/templates/standard-3tier/app/infrastructure/database/models/: item_model.py.jinja
zodiac/templates/standard-3tier/app/infrastructure/database/repositories/: item_repository.py.jinja
zodiac/templates/standard-3tier/config/: app.develop.ini.jinja  app.ini.jinja
zodiac_core/: __init__.py  config.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  pagination.py  response.py  routing.py  schemas.py
zodiac_core/db/: __init__.py  repository.py  session.py  sql.py
