[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zodiac-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "loguru>=0.7.2",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
zodiac = []
sql = ["sqlmodel>=0.0.31"]
mongo = ["motor>=3.3.0"]

[tool.setuptools]
packages = ["zodiac", "zodiac_core"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [".venv", ".tox", "demo*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "ipython>=9.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "respx>=0.22.0",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "cryptography>=42.0.0",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "uvicorn>=0.40.0",
]
sql = ["sqlmodel>=0.0.31"]
