[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zodiac-core"
version = "0.2.1"
description = "ZodiacCore-Py: A high-performance core library for modern Python web services."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.15"
keywords = [
    "fastapi",
    "async",
    "web",
    "logging",
    "middleware",
    "sqlalchemy",
    "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "loguru>=0.7.2",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
zodiac = ["click>=8.0", "jinja2>=3.0"]
sql = ["sqlmodel>=0.0.31"]
mongo = ["motor>=3.3.0"]

[project.scripts]
zodiac = "zodiac.main:main"

[tool.setuptools.packages.find]
include = ["zodiac*", "zodiac_core*"]
exclude = ["tests*", "benchmarks*"]

[tool.setuptools.package-data]
zodiac = ["templates/**/*.jinja"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = [".venv", ".tox", "demo*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
addopts = """
    --cov=zodiac_core
    --cov=zodiac
    --cov-report=term-missing
    --no-cov-on-fail
    -s -vv
    -p no:warnings
    --benchmark-warmup=on
    --benchmark-warmup-iterations=10
    --benchmark-min-rounds=5
"""
log_cli = true
markers = ["serial: marks tests that must run serially (e.g., database tests)"]

[tool.coverage.run]
source = ["zodiac_core", "zodiac"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
    "*/benchmarks/*",
    "*/templates/*",
    "*/*.jinja",
]

[dependency-groups]
dev = [
    "ruff>=0.9.3",
    "ipython>=9.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-benchmark>=5.1.0",
    "py-cpuinfo>=9.0.0",
    "respx>=0.22.0",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.22.1",
    "uvicorn>=0.40.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
    "mike>=2.0.0",
]
